Implement data-driven music and tip preferences